New button, cleaner code, eliminate idle CPU usage - v0.3.3

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.3.3
+Date: 2018-06-17
+  Changes:
+    - New button, cleaner code, eliminate idle CPU usage
+---------------------------------------------------------------------------------------------------
 Version: 0.3.2
 Date: 2018-05-02
   Optimizations:
