--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.3.4
+Date: 2019-03-24
+  Changes:
+    - Updated for 0.17
+---------------------------------------------------------------------------------------------------
 Version: 0.3.3
 Date: 2018-06-17
   Changes:
