--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,11 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.4.0
+Date: 2019-08-02
+  Features:
+    - Added command "DeleteEmptyChunks" and remote interface
+  Notes:
+    - Updated by ZwerOxotnik
+---------------------------------------------------------------------------------------------------
 Version: 0.3.4
 Date: 2019-03-24
   Changes:
