--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.3.6
+Date: 2019-08-25
+  Features:
+    - Added console command and remote interface
+---------------------------------------------------------------------------------------------------
 Version: 0.3.4
 Date: 2019-03-24
   Changes:
