--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.3.9
+Date: 2020-01-31
+  Changes:
+    - Updated for 0.18
+---------------------------------------------------------------------------------------------------
 Version: 0.3.8
 Date: 2019-09-01
   Features:
