--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.3.10
+Date: 2020-02-02
+  Features:
+    - Added compatibility for Mining Drones
+---------------------------------------------------------------------------------------------------
 Version: 0.3.9
 Date: 2020-01-31
   Changes:
