Limit functionality to admins and server console

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.4.0
+Date: 2020-02-15
+  Features:
+    - Functionality limited to admins and server console
+---------------------------------------------------------------------------------------------------
 Version: 0.3.10
 Date: 2020-02-02
   Features:
