Use dot (".") as surface name to select current

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.4.1
+Date: 2020-04-16
+  Features:
+    - Use dot (".") as surface name to select current
+---------------------------------------------------------------------------------------------------
 Version: 0.4.0
 Date: 2020-02-15
   Features:
