Bugfix, admin warning for any button

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.4.2
+Date: 2020-07-11
+  Bugfixes:
+    - Logical error would print warning to non-admins when any button was pressed
+---------------------------------------------------------------------------------------------------
 Version: 0.4.1
 Date: 2020-04-22
   Features:
