--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.4.3
+Date: 2020-12-27
+  Changes:
+    - Updated for 1.1
+---------------------------------------------------------------------------------------------------
 Version: 0.4.2
 Date: 2020-07-11
   Bugfixes:
